tests/snapshots/test_runner__tests__compiler__typecheck__constrained_type_1__constrained_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Grade = A | B | C
class Boolean = true | false

let (a : Boolean) .not : Boolean =
  a. (
    -> true [ false ]
    -> false [ true ]
  )

let<T> (left : T) .`!=` (right : T) : Boolean
  given { equals : T -> T -> Boolean }
  = left .equals (right) .not

entry
  A .`!=` (A) .print
// Error, missing { equals : Grade -> Grade -> Boolean }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/constrained_type_1/constrained_type_1.kk:15:3
   │
15 │   A .`!=` (A) .print
   │   ^^^^^^^ Unsatisfied Constraint
   │
   = The following variable is required but not found:

     equals: (Grade -> (Grade -> Boolean))
